fix: unify logger to slf4j