@@ -18,19 +18,19 @@ package io.agentscope.runtime.sandbox.tools.browser;
 import io.agentscope.runtime.sandbox.box.BrowserSandbox;
 import io.agentscope.runtime.sandbox.box.Sandbox;
 import io.agentscope.runtime.sandbox.tools.SandboxTool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 /**
  * Browser dialog handling tool
  */
 public class HandleDialogTool extends BrowserSandboxTool {
 
-    Logger logger = Logger.getLogger(HandleDialogTool.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(HandleDialogTool.class);
 
     public HandleDialogTool() {
         super("browser_handle_dialog", "browser", "Handle browser dialogs (alert, confirm, prompt)");
@@ -48,7 +48,7 @@ public class HandleDialogTool extends BrowserSandboxTool {
         properties.put("accept", acceptProperty);
         properties.put("promptText", promptTextProperty);
 
-        List<String> required = Arrays.asList("accept");
+        List<String> required = List.of("accept");
 
         schema.put("type", "object");
         schema.put("properties", properties);
@@ -70,8 +70,7 @@ public class HandleDialogTool extends BrowserSandboxTool {
             throw new RuntimeException("Only BrowserSandbox supported in browser handle dialog tool");
         } catch (Exception e) {
             String errorMsg = "Browser Handle Dialog Error: " + e.getMessage();
-            logger.severe(errorMsg);
-            e.printStackTrace();
+            logger.error(errorMsg);
             return errorMsg;
         }
     }
