@@ -18,16 +18,16 @@ package io.agentscope.runtime.sandbox.tools.browser;
 import io.agentscope.runtime.sandbox.box.BrowserSandbox;
 import io.agentscope.runtime.sandbox.box.Sandbox;
 import io.agentscope.runtime.sandbox.tools.SandboxTool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 public class NavigateTool extends BrowserSandboxTool {
 
-    Logger logger = Logger.getLogger(NavigateTool.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(NavigateTool.class);
 
     public NavigateTool() {
         super("browser_navigate", "browser", "Navigate to a URL in the browser");
@@ -40,7 +40,7 @@ public class NavigateTool extends BrowserSandboxTool {
         Map<String, Object> properties = new HashMap<>();
         properties.put("url", urlProperty);
 
-        List<String> required = Arrays.asList("url");
+        List<String> required = List.of("url");
 
         schema.put("type", "object");
         schema.put("properties", properties);
@@ -62,8 +62,7 @@ public class NavigateTool extends BrowserSandboxTool {
             throw new RuntimeException("Only BrowserSandbox supported in browser navigate tool");
         } catch (Exception e) {
             String errorMsg = "Browser Navigate Error: " + e.getMessage();
-            logger.severe(errorMsg);
-            e.printStackTrace();
+            logger.error(errorMsg);
             return errorMsg;
         }
     }
