@@ -18,19 +18,19 @@ package io.agentscope.runtime.sandbox.tools.browser;
 import io.agentscope.runtime.sandbox.box.BrowserSandbox;
 import io.agentscope.runtime.sandbox.box.Sandbox;
 import io.agentscope.runtime.sandbox.tools.SandboxTool;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.logging.Logger;
 
 /**
  * Browser key press tool
  */
 public class PressKeyTool extends BrowserSandboxTool {
 
-    Logger logger = Logger.getLogger(PressKeyTool.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(PressKeyTool.class);
 
     public PressKeyTool() {
         super("browser_press_key", "browser", "Press a key in the browser");
@@ -43,7 +43,7 @@ public class PressKeyTool extends BrowserSandboxTool {
         Map<String, Object> properties = new HashMap<>();
         properties.put("key", keyProperty);
 
-        List<String> required = Arrays.asList("key");
+        List<String> required = List.of("key");
 
         schema.put("type", "object");
         schema.put("properties", properties);
@@ -65,8 +65,7 @@ public class PressKeyTool extends BrowserSandboxTool {
             throw new RuntimeException("Only BrowserSandbox supported in browser press key tool");
         } catch (Exception e) {
             String errorMsg = "Browser Press Key Error: " + e.getMessage();
-            logger.severe(errorMsg);
-            e.printStackTrace();
+            logger.error(errorMsg);
             return errorMsg;
         }
     }
